objects/npsp__Custom_Column_Header__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the configuration for the list views on the Gift Entry landing page.</description>
    <fields>
        <fullName>npsp__Field_Api_Name__c</fullName>
        <description>The API name of the field displayed in the list view.</description>
        <inlineHelpText>The API name of the field displayed in the list view.</inlineHelpText>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Index__c</fullName>
        <description>The position of the field in the list view.</description>
        <inlineHelpText>The position of the field in the list view.</inlineHelpText>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__List_Name__c</fullName>
        <description>The list view (e.g. Batches or Templates) that displays this field.</description>
        <inlineHelpText>The list view (e.g. Batches or Templates) that displays this field.</inlineHelpText>
        <label>List Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Custom Column Header</label>
</CustomObject>